new_tests/semantics/scope/bad/005_PD1.cm

def global a:Int = 5

def func(in a:Int) => Void {}
